--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,15 @@
-<h1>
-  {{title}}
-</h1>
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" routerLink=""><span class="glyphicon glyphicon-thumbs-down" aria-hidden="true"></span> HaterNews</a>
+    </div>
+    <ul class="nav navbar-nav nav-pills navbar-right">
+      <li><a routerLink="#">About</a></li>
+    </ul>
+  </div>
+</nav>
+
+<div class="container">
+  <h1>All the news for you to hate on</h1>
+  <router-outlet></router-outlet>
+</div>
