--- a/src/app/people/people.component.html
+++ b/src/app/people/people.component.html
@@ -1,3 +1,12 @@
-<p>
-  people works!
-</p>
+<div class="people panel-default">
+  <div class="panel-heading">
+    <h2>{{cat}}</h2>
+  </div>
+  <div class="panel panel-body">
+    <div class="well" *ngFor='let post of postsToDisplay'>
+      <p>{{post.title}}</p>
+      <p>{{post.date}}</p>
+      <p>{{post.content}}</p>
+    </div>
+  </div>
+</div>
