--- a/src/app/post-detail/post-detail.component.html
+++ b/src/app/post-detail/post-detail.component.html
@@ -3,7 +3,7 @@
     <h2>{{postToDisplay.title}}</h2>
   </div>
   <div class="panel panel-body">
-    <h4><a routerLink='../{{postToDisplay.category}}'>Category: {{postToDisplay.category}}</a></h4>
+    <h4><a routerLink='../../{{postToDisplay.category}}'>Category: {{postToDisplay.category}}</a></h4>
     <p>{{postToDisplay.date}}</p>
     <p>{{postToDisplay.content}}</p>
   </div>
