--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
 
-h3{
-  color: darkred;
+
+/*h4.clickable{
+  color: darkblue;
+}*/
+a:hover{
+  cursor: pointer;
 }
