--- a/src/app/frontpage/frontpage.component.html
+++ b/src/app/frontpage/frontpage.component.html
@@ -1,7 +1,13 @@
-<div class="well" *ngFor="let post of posts" >
-  <h4 (click)="goToDetailPage(post)">{{post.title}}</h4>
-  <p (click)="goToCategoryPage(post)">Category: {{post.category}}</p>
+<h1>All the news for you to hate on</h1>
+<div class="panel-default" *ngFor="let post of posts" >
+  <div class="panel-heading">
+    <h3 (click)="goToDetailPage(post)"><a>{{post.title}}</a></h3>
+  </div>
+  <div class="panel-body">
+    <h4 (click)="goToCategoryPage(post)">Category: <a>{{post.category}}</a></h4>
+  </div>
 </div>
+
 <div class="row">
   <div class="col-sm-3 people panel-default">
     <div class="panel-heading">
