implement new post component

--- a/src/app/category/category.component.html
+++ b/src/app/category/category.component.html
@@ -1,10 +1,9 @@
 <h1>{{cat}}</h1>
-<div class="people panel-default" *ngFor='let post of postsToDisplay'>
+<div class="people panel-default" *ngFor='let post of posts'>
   <div class="panel-heading">
-    <p>{{post.title}}</p>
+    <h2 (click)="goToDetailPage(post)">{{post.title}}</h2>
   </div>
-  <div class="panel panel-body" >
+  <div class="panel panel-body">
     <p>{{post.date}}</p>
-    <p>{{post.content}}</p>
   </div>
 </div>
