--- a/src/app/post-detail/post-detail.component.html
+++ b/src/app/post-detail/post-detail.component.html
@@ -6,5 +6,6 @@
     <h4 (click)="goToCategoryPage(post)"><a>Category: {{post.category}}</a></h4>
     <p>{{post.date}}</p>
     <p>{{post.content}}</p>
+    <img src={{post.image}} alt={{post.title}} />
   </div>
 </div>
