--- a/src/app/new-post/new-post.component.html
+++ b/src/app/new-post/new-post.component.html
@@ -11,10 +11,10 @@
       <span class="input-group-addon" for="category">Category:</span>
       <select #category  class="form-control" id="category">
         <!-- <option *ngFor="let category of Categories" [value]=category>{{category}}</option> -->
-        <option [value]="people">People</option>
-        <option [value]="places">Places</option>
-        <option [value]="music">Music</option>
-        <option [value]="tv">TV</option>
+        <option value="people">People</option>
+        <option value="places">Places</option>
+        <option value="music">Music</option>
+        <option value="tv">TV</option>
       </select>
     </div>
 
