--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,16 @@
       <a class="navbar-brand" routerLink=""><span class="glyphicon glyphicon-thumbs-down" aria-hidden="true"></span> HaterNews</a>
     </div>
     <ul class="nav navbar-nav nav-pills navbar-right">
-      <li><a routerLink="#">About</a></li>
+      <li><a routerLink="new-post">New Post</a></li>
+      <li><a routerLink="categories/people">People</a></li>
+      <li><a routerLink="categories/places">Places</a></li>
+      <li><a routerLink="categories/music">Music</a></li>
+      <li><a routerLink="categories/tv">TV</a></li>
+
+
+
+
+
     </ul>
   </div>
 </nav>
