--- a/src/app/category/category.component.html
+++ b/src/app/category/category.component.html
@@ -1,9 +1,10 @@
 <h1>{{cat}}</h1>
 <div class="people panel-default" *ngFor='let post of posts'>
-  <div class="panel-heading">
-    <h2 (click)="goToDetailPage(post)">{{post.title}}</h2>
-  </div>
-  <div class="panel panel-body">
+  <!-- <div class="panel-heading"> -->
+    <h3 (click)="goToDetailPage(post)"><a>{{post.title}}</a></h3>
+  <!-- </div> -->
+  <!-- <div class="panel panel-body"> -->
     <p>{{post.date}}</p>
-  </div>
+  <!-- </div> -->
+  <hr>
 </div>
