edit component complete

--- a/src/app/post-detail/post-detail.component.html
+++ b/src/app/post-detail/post-detail.component.html
@@ -14,3 +14,4 @@
       <a (click)="upVote()" class="glyphicon glyphicon-thumbs-up text-success clickable" aria-hidden="true"></a> Score: {{post.score}}</h1>
   </div>
 </div>
+<button (click)="editPost(post)" class="btn btn-danger">Edit</button>
