--- a/src/app/category/category.component.html
+++ b/src/app/category/category.component.html
@@ -1,10 +1,6 @@
-<h1>{{cat}}</h1>
+<h1>Category: {{cat}}</h1>
 <div class="people panel-default" *ngFor='let post of posts'>
-  <!-- <div class="panel-heading"> -->
-    <h3 (click)="goToDetailPage(post)"><a>{{post.title}}</a></h3>
-  <!-- </div> -->
-  <!-- <div class="panel panel-body"> -->
-    <p>{{post.date}}</p>
-  <!-- </div> -->
+  <h3 (click)="goToDetailPage(post)"><a>{{post.title}}</a></h3>
+  <p>{{post.date}}</p>
   <hr>
 </div>
