edit componenet complete

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,10 +5,10 @@
     </div>
     <ul class="nav navbar-nav nav-pills navbar-right">
       <li><a routerLink="new-post">New Post</a></li>
-      <li><a routerLink="categories/people">People</a></li>
+      <!-- <li><a routerLink="categories/people">People</a></li>
       <li><a routerLink="categories/places">Places</a></li>
       <li><a routerLink="categories/music">Music</a></li>
-      <li><a routerLink="categories/tv">TV</a></li>
+      <li><a routerLink="categories/tv">TV</a></li> -->
     </ul>
   </div>
 </nav>
