--- a/src/app/post-detail/post-detail.component.html
+++ b/src/app/post-detail/post-detail.component.html
@@ -1,9 +1,23 @@
 <div class="panel-default">
-  <div class="panel-heading">
-    <h2>{{post.title}}</h2>
+  <div class="panel-heading vertical-center">
+    <h3>{{post.title}}</h3>
   </div>
   <div class="panel panel-body">
-    <h4 (click)="goToCategoryPage(post)"><a>Category: {{post.category}}</a></h4>
+
+    <div class="row">
+      <div class="col-sm-9">
+        <h4 (click)="goToCategoryPage(post)"><a>Category: {{post.category}}</a></h4>
+      </div>
+      <div class="col-sm-3 ">
+        <div class="btn-group" role="group">
+          <button (click)="editPost(post)" type="button" class="btn btn-secondary btn-warning">Edit</button>
+          <button (click)="deletePost(post)" type="button" class="btn btn-secondary btn-danger">Delete</button>
+        </div>
+      </div>
+    </div>
+
+
+
     <p>{{post.date}}</p>
     <p>{{post.content}}</p>
     <img src={{post.image}} alt={{post.title}} />
@@ -14,4 +28,3 @@
       <a (click)="upVote()" class="glyphicon glyphicon-thumbs-up text-success clickable" aria-hidden="true"></a> Score: {{post.score}}</h1>
   </div>
 </div>
-<button (click)="editPost(post)" class="btn btn-danger">Edit</button>
