some little things

--- a/src/app/post-detail/post-detail.component.html
+++ b/src/app/post-detail/post-detail.component.html
@@ -24,7 +24,6 @@
 
   </div>
   <div class="panel-footer">
-    <h1><a (click)="downVote()" class="glyphicon glyphicon-thumbs-down text-danger clickable" aria-hidden="true"></a>
-      <a (click)="upVote()" class="glyphicon glyphicon-thumbs-up text-success clickable" aria-hidden="true"></a> Score: {{post.score}}</h1>
+    <h1><a (click)="upVote()" class="glyphicon glyphicon-thumbs-up text-success clickable" aria-hidden="true"></a>&nbsp; <a (click)="downVote()" class="glyphicon glyphicon-thumbs-down text-danger clickable" aria-hidden="true"></a>&nbsp; Score: {{post.score}}</h1>
   </div>
 </div>
